fixed scrollbar issue, tabs for fixture page, tidied here and there

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -100,6 +100,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  scrollbar-gutter: stable;
+  overflow-y: scroll;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -10539,17 +10541,15 @@ header:hover .close{
 /* Change background color of buttons on hover */
 .tab button:hover {
   background-color: #ddd;
+  color:black;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-  background-color: #ccc;
+  background-color: white;
+  color:black;
 }
 
 /* Style the tab content */
 .tabcontent {
-  display: none;
-  padding: 6px 12px;
-  border: 1px solid #ccc;
-  border-top: none;
 }
